--- a/css/main.css
+++ b/css/main.css
@@ -3,8 +3,9 @@ body {
     font: 400 100%/1.4 "Gotham Narrow A","Gotham Narrow B","Gotham Narrow","Helvetica Neue","Arial",sans-serif;
     color: #333;
 }
-.companyLogo[data-tenant-branding-logo="true"]:before {
+.companyLogo:before {
     content: "";
     display: block;
     background-size: contain;
+    background-repeat: no-repeat;
 }
