--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@
 }
 body {
     background: #fff;
-    font: 400 100%/1.4 "Gotham Narrow A","Gotham Narrow B","Gotham Narrow","Helvetica Neue","Arial",sans-serif;
+    font: 400 "Gotham Narrow A","Gotham Narrow B","Gotham Narrow","Helvetica Neue","Arial",sans-serif;
     color: #333;
 }
 .companyLogo:before {
